# minimal-geodesic

./: LICENSE  README.md
src/app/: CMakeLists.txt  bestCircleFit.cpp  bestCircleFit.h  circleMean.cpp  circleMean.h  pns.cxx  pns.xml  vtkbestcircle.cpp  vtkbestcircle.h  vtkbestsphere.cpp  vtkbestsphere.h
src/py/: PNS.py  one_class_svm.py  plot_pns.py  run_pns.py  run_pns_test.py
